# AI_Experiment_Workbench

./: .gitignore  .gitmodules  README.md  roadmap.txt  visualREADME.md
AI_models/: attack_detection.pkl  attack_detection_2.pt  forecasting_2.pkl
docs/: JupyterHub_GPU.md  visualREADME.md
docs/presentation/: Workbench_Architekture.pptx  ai_robustness.txt
example-values/: external-kc-superlink-only.yaml  internal-kc-client-only.yaml
helper-scripts/: activate-local.sh  deactivate-local.sh
images/: generic-build.sh
images/flower-client/: Dockerfile  pyproject.toml
images/flower-server/: Dockerfile  pyproject.toml
images/flower-sidecar/: Dockerfile  flwr-proxy.py  requirements.txt
images/tensorflow-notebook/: Dockerfile  flwr-wrapper.sh  requirements.txt
jn-tb/: mlflow.Dockerfile  start-notebook.sh
kubernetes/: start.sh  stop.sh
kubernetes/db/: db-deployment.yaml  db-secret-pgadmin.yaml  db-secret.yaml  db-servers-configmap.yaml  db-service.yaml
kubernetes/minio/: minio-deployment.yaml  minio-secret.yaml  minio-service.yaml
kubernetes/mlflow-secret/: mlflow-secret.yaml
kubernetes/values/: jupyterhub.yaml  minio-tenant.yaml  pgadmin.yaml
mlflow-workbench/: Chart.yaml  values.yaml
mlflow-workbench/base-app/: tensorboard_logger.py
mlflow-workbench/charts/: minio-0.5.7.tgz  postgres-0.13.2.tgz
mlflow-workbench/files/: exports.py  mlflow_tensorboard_examples.ipynb
mlflow-workbench/flower-app/: client.py  dataset_registration.ipynb  pyproject.toml  server.py
mlflow-workbench/templates/: _helpers.tpl  credentials-secret.yaml  (+29 more)
notebook-scripts/: basic-auth.ini  requirements.txt
(+11 files in other folders)
