[project]
name = "flower-test"
version = "1.0.0"
description = "Manual testing of Supernode/Superlink"
dependencies = [
    "flwr",
    "mlflow"
]

[tool.flwr.app]
publisher = "acs"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client:app"

[tool.flwr.federations]
default = "k8s"

[tool.flwr.federations.k8s]
address = "flower-server-svc:9093"
root-certificates="/app/certs/ca.crt"